--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-Assets/AssetStoreTools*
+*[Ll]ibrary/
+*[Tt]emp/
+*[Oo]bj/
+*[Bb]uild/
+*[Bb]uilds/
+*Assets/AssetStoreTools*
 
 # Visual Studio cache directory
 .vs/
@@ -37,5 +37,5 @@ sysinfo.txt
 *.unitypackage
 
 # Crashlytics generated file
-Assets/StreamingAssets/crashlytics-build.properties
+*Assets/StreamingAssets/crashlytics-build.properties
 
